crates/toml_edit/tests/fixtures/invalid/integer-underscore-double.stderr
TOML parse error at line 1, column 9
  |
1 | bad = 1__23
  |         ^
Unexpected `_`
Expected digit
While parsing an Integer
